# ElectromagneticSimulation

./: .editorconfig  CMakeLists.txt
src/: app_images.cpp  app_images.h  app_scene.cpp  app_scene.h  barrier.cpp  barrier.h  d2d_resource.cpp  d2d_resource.h  field.cpp  field.h  main.cpp  particle.cpp  particle.h  rect.cpp  rect.h  scene.cpp  scene.h  simulation_app.cpp  simulation_app.h  vector3d.cpp  vector3d.h
